cambie pagina productos

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                         <a class="nav-link active" aria-current="page" href="index.html">|Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="quienesomos.html">|Quienes Somos</a>
+                        <a class="nav-link" href="../pages/quienesomos.html">|Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactanos.html">|Contact Us</a>
+                        <a class="nav-link" href="../pages/contactanos.html">|Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">|Productos</a>
+                        <a class="nav-link" href="../pages/productos.html">|Productos</a>
                     </li>
                 </ul>
             </div>
@@ -125,7 +125,7 @@
                 <div class="row">
                     <!-- Card 1. -->
                     <div class="col cardItem">
-                        <div class="card card1" style="width: 18rem;">
+                        <div class="card card1" >
                             <img src="images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top"
                                 alt="Mesa patas de madera con sillas">
                             <div class="card-body">
@@ -138,7 +138,7 @@
                     <!-- Fin Card 1. -->
                     <!-- Card 2. -->
                     <div class="col cardItem">
-                        <div class="card card2" style="width: 18rem;">
+                        <div class="card card2" >
                             <img src="images/Sillones/sillon 7.png" class="card-img-top" alt="Silon cuero negro">
                             <div class="card-body">
                                 <p class="card-text">Nada como llegar a la casa luego de un largo dia y poder disfrutar
@@ -151,7 +151,7 @@
 
                     <!-- Card 3. -->
                     <div class="col cardItem">
-                        <div class="card card3" style="width: 18rem;">
+                        <div class="card card3">
                             <img src="images/Tv-Mueble/Tv7.jpg" class="card-img-top"
                                 alt="Mueble de mesa madera prensada">
                             <div class="card-body">
@@ -169,7 +169,7 @@
                 <div class="row">
                     <!-- Card 4. -->
                     <div class="col cardItem">
-                        <div class="card card4" style="width: 18rem;">
+                        <div class="card card4">
                             <img src="images/Camas-Respaldo/cama7.jpg" class="card-img-top"
                                 alt="Cama con respaldo madera">
                             <div class="card-body">
@@ -182,7 +182,7 @@
 
                     <!-- Card 5. -->
                     <div class="col cardItem">
-                        <div class="card card5" style="width: 18rem;">
+                        <div class="card card5">
                             <img src="images/Kit-Baño/kit4.jpg" class="card-img-top" alt="Baño equipado">
                             <div class="card-body">
                                 <p class="card-text">Ofrecemos de nuestra gama de productos selectos varios kit de
@@ -195,7 +195,7 @@
 
                     <!-- Card 6. -->
                     <div class="col cardItem">
-                        <div class="card card6" style="width: 18rem;">
+                        <div class="card card6">
                             <img src="images/Mesada-Cocina/Mesada4.jpg" class="card-img-top" alt="Mesada marmol negro">
                             <div class="card-body">
                                 <p class="card-text">Siempre es bueno cocinar con buen espacio para manejar lo
@@ -220,9 +220,9 @@
                         <section class="footerNav">
                             <ul>
                                 <li><a href="index.html">Inicio</a></li>
-                                <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-                                <li><a href="pages/contactanos.html">Contactanos</a></li>
-                                <li><a href="pages/productos.html">Productos</a></li>
+                                <li><a href="../pages/quienesomos.html">Quienes Somos</a></li>
+                                <li><a href="../pages/contactanos.html">Contactanos</a></li>
+                                <li><a href="../pages/productos.html">Productos</a></li>
                             </ul>
                         </section>
                     </div>
