--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,34 +49,42 @@
         </div>
       </div>
     </nav>
+    <img class="fondoPantalla" src="../images/Casas/casa1.jpg" alt="Casa exterior Anochecer" >
   </header>
   <!-- Fin Nav bar -->
 
-  <img class="fondoPantalla" src="../images/Casas/casa1.jpg" alt="Casa exterior Anochecer">
+
+            <!-- Main Content -->
+            <section class="mainContent mainContentProductos">
+              <Main>
+                <h1>Nuestra Pasión</h1>
+                <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
+                  Tenemos muebles prefabricados , y tambien hacemos a medida en nuestro taller de artesanos. <br>
+                  Por que para nosotros el confort tuyo es nuestro deber !</p>
+              </Main>
+  
 
   <!-- Muestras de Productos -->
 
   <div class="container text-center">
     <div class="row">
       <div class="col">
-        <div class="card mb-3">
+        <div class="card-producto mb-3">
           <img src="../images/Camas-Respaldo/cama4.jpg" class="card-img-top" alt="Cama Respaldo Rustico">
           <div class="card-body">
             <h5 class="card-title">Camas Con Respaldo</h5>
             <p class="card-text">En nuestro Kit de Camas con respaldo incluimos los muebles adicionales: mesas y
               comodas.</p>
-            <p class="card-text"><small class="text-muted">Consulte modelos y colores disponibles</small></p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card mb-3">
+        <div class="card-producto mb-3">
           <img src="../images/Kit-Baño/kit3.jpg" class="card-img-top" alt="Kit de espejo con luz led">
           <div class="card-body">
             <h5 class="card-title">Kit de Baño</h5>
             <p class="card-text">Aqui en Home Maker nos gusta innovar con lo ultimo en moda y tecnologia para griferia y
               decoración de baños.</p>
-            <p class="card-text"><small class="text-muted">Optimizando tu baño</small></p>
           </div>
         </div>
       </div>
@@ -85,24 +93,22 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <div class="card mb-3">
+          <div class="card-producto mb-3">
             <img src="../images/Mesada-Cocina/Mesada1.jpg" class="card-img-top"
               alt="Mesada de marmol blanco con isla flotante">
             <div class="card-body">
               <h5 class="card-title">Cocinas Premium</h5>
               <p class="card-text">Sabemos que cocinar puede ser disgustante ,pero queremos que cocinar sea un
                 entretenimiento con nuestros ultimos muebles para la gastronomia hogareña.</p>
-              <p class="card-text"><small class="text-muted">Que cocinar sea un placer</small></p>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-3">
+            <div class="card-producto mb-3">
               <img src="../images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top" alt="Mesa de Marmol con sillas grises">
               <div class="card-body">
                 <h5 class="card-title">Mesa y Sillas</h5>
                 <p class="card-text">La sala de estar o living es un ambiente donde podemos dispersarnos con nuestros
                   seres queridos por ello te ofrecemos lo nuevo en Mesas y sillas.</p>
-                <p class="card-text"><small class="text-muted">Let's be confort and elegant</small></p>
               </div>
             </div>
 
@@ -112,38 +118,28 @@
         <div class="container text-center">
           <div class="row">
             <div class="col">
-              <div class="card mb-3">
+              <div class="card-producto mb-3">
                 <img src="../images/Sillones/sillon 1.jpg" class="card-img-top" alt="Sillon Gris">
                 <div class="card-body">
                   <h5 class="card-title">Sillones y Sofa's</h5>
                   <p class="card-text">A la hora de ver una pelicula , el partido ,o sencillamente juntarse a platicar
                     ,con nuestros sillones podes pasar horas sin cansarte relajados en compañia.</p>
-                  <p class="card-text"><small class="text-muted">Maximo confort a tu servicio</small></p>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card mb-3">
+              <div class="card-producto mb-3">
                 <img src="../images//Tv-Mueble/Tv3.jpg" class="card-img-top" alt="Mueble tv madera">
                 <div class="card-body">
                   <h5 class="card-title">Muebles de Tv</h5>
                   <p class="card-text">Al igual que el sillon, la television se luce y mas cuando tenes visitas con un
                     mueble que lo porta con elegancia.</p>
-                  <p class="card-text"><small class="text-muted">Que ver tele sea un lujo</small></p>
                 </div>
               </div>
             </div>
           </div>
           <!-- Fin de muestras de Productos -->
 
-          <!-- Main Content -->
-          <section class="mainContent mainContentProductos">
-            <Main>
-              <h1>Nuestra Pasión</h1>
-              <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
-                Tenemos muebles prefabricados , y tambien hacemos a medida en nuestro taller de artesanos.
-                Por que para nosotros el confort tuyo es nuestro deber !</p>
-            </Main>
 
             <!-- Comienzo del Footer -->
             <footer class="footerLinks">
